# VaultMind

./: .gitignore  README.md  pyproject.toml  requirements.txt  system_user_prompts_script.md
src/: __init__.py  chain_of_thought_prompting.py  chain_of_thought_prompting_script.md  dynamic_prompting.py  dynamic_prompting_script.md  evaluation_testing.py  evaluation_testing_script.md  multi_shot_prompting.py  multi_shot_prompting_script.md  one_shot_prompting.py  one_shot_prompting_script.md  prompts.py  system_user_prompts.py  tokens_tokenization.py  tokens_tokenization_script.md  top_k_control.py  top_k_control_script.md  top_p_control.py  top_p_control_script.md  zero_shot_prompting.py  zero_shot_prompting_script.md
