[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultmind"
version = "0.1.0"
description = "AI-powered CLI assistant for your Obsidian vault"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VaultMind Team", email = "team@vaultmind.dev"}
]
keywords = ["obsidian", "ai", "cli", "knowledge-management", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "typer>=0.9.0",
    "google-generativeai>=0.3.0",
    "pydantic>=2.4.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.1",
    "python-frontmatter>=1.0.0",
    "markdown>=3.5.0",
    "pathspec>=0.11.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
]
advanced = [
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "nltk>=3.8.0",
]

[project.scripts]
vmind = "src.main:app"

[project.urls]
Homepage = "https://github.com/kalviumcommunity/VaultMind"
Repository = "https://github.com/kalviumcommunity/VaultMind"
Issues = "https://github.com/kalviumcommunity/VaultMind/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai",
    "sentence_transformers",
    "faiss",
    "chromadb",
    "langchain.*",
    "nltk.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing --verbose"
